# anti-mail-service

./: .env  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py  models.py  schemas.py
app/routers/: email.py
app/services/: email_service.py
